# Notify

./: .gitignore  readme.md
sample_usage/: notify.txt
server/: .sampleenv  Snowflake.py  app.py  auth.py  generate_key.py  mail.py  pyproject.toml  requirements.txt
server/instance/: users.db
