[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sebastian Hansen <sebastian.hansen_vega@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.1"
PyJWT = "^2.8.0"
Flask-Mail = "^0.10.0"
pycryptodome = "^3.20.0"
snowflake-snowpark-python = "1.14.0"
pandas = "2.0.0"
ollama


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
